fixing the order of the box layers. forcing the red box to go behind the blue one.

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -80,11 +80,13 @@
 #grid-section2 .gridboxblue {
 	grid-column: 2/4;
 	grid-row: 1/4;
+	z-index: 2; /*making the blue box to come forward*/
 }
 
 #grid-section2 .gridboxred {
 	grid-row: 2/3;
 	grid-column: 1/3;
+	z-index: 1; /*making the red box to go behind the blue box*/
 }
 
 /* end Grid Part 2 */
